refactor(elementcomposite): improve elementcomposite views with self field pattern and private final fields